Fix z-index to display basket in front of navbar

--- a/src/app/components/basket/basket.component.scss
+++ b/src/app/components/basket/basket.component.scss
@@ -11,7 +11,7 @@
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    z-index: 1;
+    z-index: 30;
     transition-duration: .5s;
 }
 
